# power-grid-model

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gersemirc  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .python-version  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_REQUEST_TAP_REGULATOR_VALIDATION.md  GITHUB_ISSUE_INSTRUCTIONS.md  MANIFEST.in  PROJECT_GOVERNANCE.md  README.md  README_FEATURE_REQUEST.md  RELEASE.md  REUSE.toml  SUMMARY.md  SUPPORT.md  biome.jsonc  build.sh  conda_build_preparation.py  dev-requirements.txt  get_version.py  llvm-gcov.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  (+5 more)
power_grid_model_c/: CMakeLists.txt  power_grid_model_c.cpp  power_grid_model_c.hpp
power_grid_model_c/power_grid_model/: CMakeLists.txt
power_grid_model_c/power_grid_model_c/: CMakeLists.txt  buffer.cpp  dataset_definitions.cpp  handle.cpp  handle.hpp  meta_data.cpp  options.hpp  power_grid_model_c.cpp
power_grid_model_c/power_grid_model_c/include/: model.cpp  power_grid_model_c.h
power_grid_model_c/power_grid_model_c/src/: buffer.cpp  dataset.cpp  dataset_definitions.cpp  forward_declaration.hpp  forward_declarations.hpp  get_meta_data.hpp  handle.cpp  handle.hpp  input_sanitization.hpp  instantiate_icpf.cpp  instantiate_ilse.cpp  instantiate_lpf.cpp  instantiate_nrpf.cpp  instantiate_nrse.cpp  instantiate_sc.cpp  logger.cpp  logger.hpp  math_solver.cpp  math_solver.hpp  meta_data.cpp  model.cpp  options.cpp  options.hpp  safe_memory_handling.hpp  serialization.cpp
power_grid_model_c/power_grid_model_cli/: CMakeLists.txt  cli_functions.hpp  cli_options.cpp  cli_options.hpp  main.c  main.cpp  pgm_calculation.cpp
power_grid_model_c/power_grid_model_cli_backend/: CMakeLists.txt
power_grid_model_c/power_grid_model_cli_backend/src/: cli_functions.hpp  cli_main.cpp  cli_options.cpp  pgm_calculation.cpp
power_grid_model_c/power_grid_model_cpp/: CMakeLists.txt
power_grid_model_c/power_grid_model_cpp/include/: power_grid_model_cpp.hpp
power_grid_model_c_example/: CMakeLists.txt  main.c  serialization.c
tests/: CMakeLists.txt
tests/benchmark_cpp/: CMakeLists.txt  benchmark.cpp  fictional_grid_generator.hpp  observability_benchmark.cpp
tests/c_api_tests/: CMakeLists.txt  c_api_cpp_handle.hpp  test_c++_wrapper_meta_data.cpp  test_c++_wrapper_model.cpp  test_c++_wrapper_serialization.cpp  test_c_api_meta_data.cpp  test_c_api_model.cpp  test_cpp_api_meta_data.cpp  test_cpp_api_model.cpp  test_cpp_api_serialization.cpp  test_cpp_wrapper_meta_data.cpp  test_cpp_wrapper_model.cpp  test_cpp_wrapper_serialization.cpp  test_serialization.cpp
tests/cpp_cli_tests/: CMakeLists.txt  test_cli.cpp
tests/cpp_integration_tests/: CMakeLists.txt  test_entry_point.cpp  test_main_model.cpp  test_main_model_sc.cpp  test_main_model_se.cpp  test_main_model_static.cpp  test_math_solver.cpp
tests/cpp_unit_tests/: CMakeLists.txt  c_api_cpp_handle.hpp  test_all_components.cpp  test_asym_line.cpp  test_bsr_solver.cpp  test_c_api_meta_data.cpp  test_c_api_model.cpp  test_calculation_info.cpp  test_calculation_preparation.cpp  test_common.cpp  test_component_input.cpp  test_component_output.cpp  test_component_update.cpp  test_container.cpp  test_core_utils.cpp  test_counting_iterator.cpp  test_current_sensor.cpp  test_dataset.cpp  test_deserializer.cpp  test_entry_point.cpp  test_exceptions.cpp  test_fault.cpp  test_generic_branch.cpp  test_genericbranch.cpp  test_grouped_index_vector.cpp  test_implicit_conversion.cpp  test_index_mapping.cpp  test_intellisense.cpp  test_iterator_facade.cpp  test_job_dispatch.cpp  test_line.cpp  test_link.cpp  test_link_solver.cpp  test_load_gen.cpp  test_main_core_output.cpp  test_main_model.cpp  test_main_model_sc.cpp  test_main_model_se.cpp  test_main_model_static.cpp  test_main_model_type.cpp  (+44 more)
tests/cpp_unit_tests/auxiliary/: CMakeLists.txt  test_component_input.cpp  test_component_update.cpp  test_dataset.cpp  test_deserializer.cpp  test_meta_data_generation.cpp
tests/cpp_unit_tests/common/: CMakeLists.txt  test_common.cpp  test_component_list.cpp  test_counting_iterator.cpp  test_exceptions.cpp  test_grouped_index_vector.cpp  test_iterator_facade.cpp  test_maybe_owning_view.cpp  test_statistics.cpp  test_typing.cpp
tests/cpp_unit_tests/component/: CMakeLists.txt  test_current_sensor.cpp  test_line.cpp  test_load_gen.cpp  test_node.cpp  test_power_sensor.cpp  test_source.cpp  test_three_winding_transformer.cpp  test_transformer_tap_regulator.cpp  test_voltage_regulator.cpp
tests/cpp_unit_tests/logging/: CMakeLists.txt  test_calculation_info.cpp  test_text_logger.cpp
tests/cpp_unit_tests/main_core/: CMakeLists.txt  test_main_core_output.cpp  test_main_model_type.cpp
tests/cpp_unit_tests/math_solver/: CMakeLists.txt  test_math_solver_common.hpp  test_math_solver_pf.hpp  test_math_solver_pf_linear.cpp  test_math_solver_pf_newton_raphson.cpp  test_math_solver_sc.cpp  (+5 more)
tests/cpp_validation_tests/: CMakeLists.txt  test_validation.cpp
tests/native_api_tests/: CMakeLists.txt  load_dataset.hpp  test_api_buffer.cpp  test_api_dataset.cpp  test_api_logger.cpp  test_api_meta_data.cpp  test_api_model.cpp  test_api_model_misc.cpp  test_api_model_multi_dimension.cpp  test_api_model_update.cpp  test_api_serialization.cpp  test_api_utils.cpp
tests/package_tests/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  test_c_api_package.cpp
tests/power_grid_model_static/: CMakeLists.txt
tests/unit/: test_0Z_model_validation.py  test_buffer_handling.py  test_cli.py  test_data_handling.py  test_dataset.py  test_dataset_definitions.py  test_enum.py  test_error_handling.py  test_file_io.py  test_internal_utils.py  test_manual_testing.py  test_meta_data.py  test_multi_dimensional_batch.py  test_optional_ids.py  test_power_grid_model.py  test_python_threading.py  test_sensor_disabled_object.py  test_serialization.py  test_utils.py  utils.py
(+1389 files in other folders)
